unpackaged/main/default/objects/metazoa_snapshot_perm__c/fields/metazoa_extra_flag_one__c.field-meta.xml
<CustomField>
	<fullName>metazoa_extra_flag_one__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Extra Flag One</label>
	<type>Checkbox</type>
</CustomField>