unpackaged/main/default/objects/metazoa_snapshot_perm__c/fields/metazoa_perm_data__c.field-meta.xml
<CustomField>
	<fullName>metazoa_perm_data__c</fullName>
	<label>Perm Data</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>