unpackaged/main/default/objects/metazoa_snapshot_perm__c/fields/metazoa_user_list__c.field-meta.xml
<CustomField>
	<fullName>metazoa_user_list__c</fullName>
	<label>User List</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>